--- a/src/View/Flask/templates/entries/bool.html
+++ b/src/View/Flask/templates/entries/bool.html
@@ -1,4 +1,5 @@
-<form>
+<form method="post">
     <label for="{{name}}">{{label}}</label>
-    <input type="checkbox" id="{{name}}" value="{{value}}" {% if checked %} checked {% endif %}>
+    <input type="checkbox" id="{{name}}" name="{{full_name}}" value="yes" {{'checked' if checked}} onchange="this.form.submit()">
+    <input type="hidden" name="{{full_name}}" value="no">
 </form>
