--- a/src/View/Flask/templates/entries/string.html
+++ b/src/View/Flask/templates/entries/string.html
@@ -1,4 +1,8 @@
-<form>
+<form method="post">
     <label for="{{name}}">{{label}}</label>
-    <input type="text" id="{{name}}" value="{{value}}">
+    <input type="text" id="{{name}}" name="{{full_name}}" value="{{value}}"  {{ 'list="%s"' %list.name if list }} onchange="this.form.submit()">
+    {% if list %}
+        {% include 'entries/list.html' %}
+    {% endif %}
 </form>
+
