--- a/src/View/Flask/static/css/main.css
+++ b/src/View/Flask/static/css/main.css
@@ -20,7 +20,7 @@
     width: 79.59184%;
     float: right;
     margin-right: 0;
-    background: purple; }
+    background: #ff00ff; }
 
 /* line 29, ../sass/main.scss */
 .bottom {
