--- a/src/View/Flask/templates/layout.html
+++ b/src/View/Flask/templates/layout.html
@@ -14,6 +14,12 @@
     </script>
 
     <script type=text/javascript src="{{ url_for('static', filename='js/form.js') }}"></script>
+
+
+    <link href="{{ url_for('static', filename='css/bootstrap-switch.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/bootstrap-switch.js') }}" ></script>
+
+
 </head>
 <body>
 
