--- a/src/View/Flask/templates/entries/bool.html
+++ b/src/View/Flask/templates/entries/bool.html
@@ -1,8 +1,8 @@
 {% extends "entries/key_word.html" %}
 
 {% block key_word %}
-    <input type="checkbox" name="{{name}}" id="{{full_name}}" {{'checked' if checked}}>
-{#    <input type="hidden" id="{{full_name}}" value="no">#}
+    <input type="checkbox" name="{{name}}" id="{{full_name}}" {{'checked' if checked}}
+           data-off-text="No" data-on-text="Yes">
 {% endblock %}
 
 
