--- a/src/View/Flask/templates/layout.html
+++ b/src/View/Flask/templates/layout.html
@@ -19,7 +19,8 @@
     <link href="{{ url_for('static', filename='css/bootstrap-switch.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/bootstrap-switch.js') }}" ></script>
 
-
+    <link href="{{ url_for('static', filename='css/jquery-ui.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='js/jquery-ui.js') }}" ></script>
 </head>
 <body>
 
