--- a/src/View/Flask/templates/entries/multiple.html
+++ b/src/View/Flask/templates/entries/multiple.html
@@ -1,5 +1,5 @@
-<fieldset>
-    <legend>{{label}}</legend>
+<div class="well">
+    <H2>{{label}}</H2>
     <table class="table table-bordered">
         <tbody>
         {% for entry in entries %}
@@ -13,27 +13,32 @@
                     </button>
                 </td>
             </tr>
-            <div class="modal fade" id="Modal_{{ name }}_{{ entry[0] }}" role="dialog">
-                <div class="modal-dialog modal-lg">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Modal Header</h4>
-                        </div>
-                        <div class="modal-body">
-                            {{entry[2]}}
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
         {% endfor %}
         </tbody>
     </table>
     <button class="btn btn-primary multiple_new" type="button" full_name="{{full_name}}">
         <span class="glyphicon glyphicon-plus"></span>
     </button>
-</fieldset>
+</div>
+
+
+{% for entry in entries %}
+
+    <div class="modal fade" id="Modal_{{ name }}_{{ entry[0] }}" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    {{entry[2]}}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endfor %}
