up down, mult keyword

--- a/src/View/Flask/templates/entries/key_word.html
+++ b/src/View/Flask/templates/entries/key_word.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group row">
     <label class="col-sm-3 control-label" for="{{full_name}}">{{label}}</label>
     <div class="col-sm-9">
             {% block key_word %}{% endblock %}
