--- a/src/View/Flask/templates/entries/bool.html
+++ b/src/View/Flask/templates/entries/bool.html
@@ -2,7 +2,7 @@
 
 {% block key_word %}
     <input type="checkbox" name="{{name}}" id="{{full_name}}" {{'checked' if checked}}
-           data-off-text="No" data-on-text="Yes">
+           data-off-text="No" data-on-text="Yes" data-label-width="0">
 {% endblock %}
 
 
