--- a/src/View/Flask/templates/entries/multiple.html
+++ b/src/View/Flask/templates/entries/multiple.html
@@ -1,44 +1,40 @@
-<div class="well">
-    <H2>{{label}}</H2>
+<div class="panel panel-default">
+    <div class="panel-heading"><h2>{{label}}</h2></div>
+    <div class="panel-body">
     <table class="table table-bordered">
         <tbody>
         {% for entry in entries %}
             <tr>
                 <td>
-                    <button type="button" class="" data-toggle="modal" data-target="#Modal_{{ name }}_{{ entry[0] }}">{{ entry[0] }}</button>
+                    {% block item scoped %}{% endblock %}
                 </td>
                 <td>
+                    <div class="btn-group">
+
+                    <button class="btn btn-success multiple_up" type="button" full_name="{{full_name}}" value="{{ entry[0]}}">
+                        <span class="glyphicon glyphicon-arrow-up"></span>
+                    </button>
+                    <button class="btn btn-success multiple_down" type="button" full_name="{{full_name}}" value="{{ entry[0]}}">
+                        <span class="glyphicon glyphicon-arrow-down"></span>
+                    </button>
                     <button class="btn btn-danger multiple_delete" type="button" full_name="{{full_name}}" value="{{ entry[0]}}">
                         <span class="glyphicon glyphicon-remove"></span>
                     </button>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-    <button class="btn btn-primary multiple_new" type="button" full_name="{{full_name}}">
-        <span class="glyphicon glyphicon-plus"></span>
-    </button>
+      <div class="panel-footer">
+          <button class="btn btn-primary multiple_new" type="button" full_name="{{full_name}}">
+              <span class="glyphicon glyphicon-plus"></span>
+          </button>
+      </div>
+    </div>
 </div>
 
 
 {% for entry in entries %}
-
-    <div class="modal fade" id="Modal_{{ name }}_{{ entry[0] }}" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                </div>
-                <div class="modal-body">
-                    {{entry[2]}}
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
+            {% block modal scoped %}{% endblock %}
 {% endfor %}
