volné přepínání modal

--- a/src/View/Flask/templates/layout.html
+++ b/src/View/Flask/templates/layout.html
@@ -25,6 +25,17 @@
 <body>
 
 {% block nav %}{% endblock %}
+
+  <div class="container">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    {% for category, message in messages %}
+      <div class="alert alert-{{ category }}">{{ message }}</div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+
+  </div>
 {% block body %}{% endblock %}
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
