deepcopy a uprava js

--- a/src/View/Flask/templates/elements/modal.html
+++ b/src/View/Flask/templates/elements/modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="Modal_{{ name }}_{{ index }}" data-backdrop="static"  role="dialog">
+<div class="modal fade" id="Modal_{{ name }}_{{ index }}"  full_name="{{ full_name }}" data-backdrop="static"  role="dialog">
     <div class="modal-dialog modal-lg">
         <!-- Modal content-->
         <div class="modal-content">
