--- a/src/View/Flask/templates/entries/select.html
+++ b/src/View/Flask/templates/entries/select.html
@@ -1,7 +1,9 @@
 {% extends "entries/key_word.html" %}
 
 {% block key_word %}
-    <select class="form-control" id="{{name}}" name="{{full_name}}">
+    <select class="form-control" id="{{full_name}}" name="{{name}}">
+        <option disabled selected value> -- select an option -- </option>
+
         {% for item in list.entries %}
       <option value="{{item.value}}" {{ 'selected' if value==item.value }}>{{item.label}}</option>
         {% endfor %}
