--- a/src/View/Flask/templates/entries/multiple.html
+++ b/src/View/Flask/templates/entries/multiple.html
@@ -11,7 +11,7 @@
                 <td>
                     {% block item scoped %}{% endblock %}
                 </td>
-                <td>
+                <td class="active button">
                     <div class="btn-group">
 
                     <button class="btn btn-success multiple_up" type="button" full_name="{{full_name}}" value="{{ entry[0]}}">
