--- a/src/View/Flask/templates/nav.html
+++ b/src/View/Flask/templates/nav.html
@@ -8,14 +8,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/ico.png') }}"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+              <ul class="nav navbar-nav">
+
+        <li><a href="packages">Configure</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Freeconf<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><a href="setting">Setting</a></li>
+                <li><a href="about">About</a></li>
+            </ul>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
