--- a/src/View/Flask/templates/body.html
+++ b/src/View/Flask/templates/body.html
@@ -2,20 +2,24 @@
 
     <div class="container-fluid">
         <div class="row content">
-        <div class="col-sm-2">
-            <h1>Menu</h1>
-            <ul class="nav nav-pills nav-stacked">
-                {% for tab in tabs %}
-                <li><a href="{{url_for('tab', package=package_name, name=tab[0])}}">{{ tab[1] }}</a></li>
-                {% endfor %}
-            </ul>
+            <div class="col-sm-2">
+
+                {% if tabs %}
+                    <h1>{{package_name}}</h1>
+                    <ul class="nav nav-pills nav-stacked">
+                        {% for tab in tabs %}
+                            <li><a href="{{ url_for('tab', package=package_name, name=tab[0]) }}">{{ tab[1] }}</a></li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+
+            </div>
+            <div class="col-sm-8">
+                {{ main }}
+            </div>
+            <div class="col-sm-2">
+            </div>
         </div>
-        <div class="col-sm-8">
-            {{main}}
-        </div>
-        <div class="col-sm-2">
-        </div>
-    </div>
     </div>
 
     <div id="Modals">
