--- a/src/View/Flask/templates/nav.html
+++ b/src/View/Flask/templates/nav.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
 
-        <li><a href="packages">Configure</a></li>
+        <li><a href="{{url_for('configure')}}">Configure</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Freeconf<span class="caret"></span></a>
             <ul class="dropdown-menu">
