--- a/src/View/Flask/templates/entries/container.html
+++ b/src/View/Flask/templates/entries/container.html
@@ -3,7 +3,7 @@
 
 {% block entry %}
 <div class="panel panel-default">
-      <div class="panel-heading"><h2>{{label}}</h2></div>
+      <div class="panel-heading" data-toggle="popover" title="{{ label }}" data-content="{{ help }}"><h2>{{label}}</h2></div>
 
   <div class="panel-body">
 
