--- a/src/View/Flask/templates/entries/multiple.html
+++ b/src/View/Flask/templates/entries/multiple.html
@@ -2,7 +2,7 @@
 
 {% block entry %}
 <div class="panel panel-default" id="full_name">
-    <div class="panel-heading"><h2>{{label}}</h2></div>
+    <div class="panel-heading" data-toggle="popover" title="{{ label }}" data-content="{{ help }}"><h2>{{label}}</h2></div>
     <div class="panel-body">
     <table class="table table-bordered">
         <tbody>
