--- a/src/View/Flask/templates/nav.html
+++ b/src/View/Flask/templates/nav.html
@@ -21,6 +21,9 @@
                 <li><a href="{{url_for('about')}}">About</a></li>
             </ul>
         </li>
+        <li><a href="{{url_for('save_config')}}">Save config</a></li>
+        <li><a href="{{url_for('save_native')}}">Save native</a></li>
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
