--- a/src/View/Flask/templates/entries/container.html
+++ b/src/View/Flask/templates/entries/container.html
@@ -1,20 +1,25 @@
-
 {% extends "entries/entry.html" %}
+{% from 'elements/macros.html'  import help as help_button %}
 
 {% block entry %}
-<div class="panel panel-default">
-      <div class="panel-heading" data-toggle="popover" title="{{ label }}" data-content="{{ help }}"><h2>{{label}}</h2></div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h2>{{ label }}</h2>
+            {% if help %}
+                {{ help_button(label, help) }}
+            {% endif %}
+        </div>
 
-  <div class="panel-body">
+        <div class="panel-body">
 
-    <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form">
 
-            {% for entry in entries %}
-            {{entry}}
-            {% endfor %}
+                {% for entry in entries %}
+                    {{ entry }}
+                {% endfor %}
 
-    </form>
+            </form>
 
+        </div>
     </div>
-</div>
 {% endblock %}
