--- a/src/View/Flask/templates/entries/multiple_cont_collapse.html
+++ b/src/View/Flask/templates/entries/multiple_cont_collapse.html
@@ -1,7 +1,7 @@
 {% extends "entries/multiple.html" %}
 
 {% block item %}
-    <button type="button" class="collapse_button btn btn-block btn-primary	"
+    <button type="button" class="collapse_button btn btn-block btn-primary	{{'inconsistent' if inconsistent}}"
             data-target="#Collapse_{{ name }}_{{ entry[0] }}" full_name="{{ entry[2] }}">
         <span class="glyphicon glyphicon-menu-down"></span>
         {{ entry[1] }}
