--- a/src/View/Flask/templates/entries/entry.html
+++ b/src/View/Flask/templates/entries/entry.html
@@ -1,3 +1,3 @@
-<div class="entry" id="entry_{{ full_name }}" full_name="{{ full_name }}" >
+<div class="entry {{'inconsistent' if inconsistent}}" id="entry_{{ full_name }}" full_name="{{ full_name }}" >
     {% block entry %}{% endblock %}
 </div>
