--- a/src/View/Flask/templates/index.html
+++ b/src/View/Flask/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Freeconf  {% if title %} - {{title}} {%endif%}</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="{{ url_for('static', filename='css/bootstrap-switch.css') }}" rel="stylesheet">
@@ -27,6 +29,8 @@
   <div class="container-fluid" id="flash">
 
   </div>
+    <h2>Receive:</h2>
+    <div id="log"></div>
 {% include "body.html" %}
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
