funkční kominkace socketio - potřeba očistit

--- a/src/View/Flask/templates/index.html
+++ b/src/View/Flask/templates/index.html
@@ -33,11 +33,11 @@
   <div class="container-fluid" id="flash">
 
   </div>
-    <h2>Receive:</h2>
-    <div id="log"></div>
+
 {% include "body.html" %}
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+    <h2>Log:</h2>
+    <div id="log"></div>
 </footer>
 
 </body>
