--- a/src/View/Flask/templates/configure.html
+++ b/src/View/Flask/templates/configure.html
@@ -3,7 +3,7 @@
 {% if packages %}
     <ul class="">
         {% for package in packages %}
-            <li><a href="{{ url_for('package.package', package=package) }}"><h2>{{ package }}</h2></a></li>
+            <li><a href="{{ url_for('package', package_name=package) }}"><h2>{{ package }}</h2></a></li>
         {% endfor %}
     </ul>
 {% endif %}
