--- a/src/View/Flask/templates/nav.html
+++ b/src/View/Flask/templates/nav.html
@@ -8,19 +8,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('main.index') }}"><img
+                <a class="navbar-brand" href="{{ url_for('index') }}"><img
                         src="{{ url_for('static', filename='img/ico.png') }}"></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
 
-                    <li><a href="{{ url_for('main.configure') }}">Configure</a></li>
+                    <li><a href="{{ url_for('configure') }}">Configure</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Freeconf<span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('main.setting') }}">Setting</a></li>
-                            <li><a href="{{ url_for('main.about') }}">About</a></li>
+                            <li><a href="{{ url_for('setting') }}">Setting</a></li>
+                            <li><a href="{{ url_for('about') }}">About</a></li>
                         </ul>
                     </li>
                     <li><button id="save_config">Save config</button></li>
