--- a/src/View/Flask/templates/body.html
+++ b/src/View/Flask/templates/body.html
@@ -3,15 +3,9 @@
     <div class="container-fluid">
         <div class="row content">
             <div class="col-sm-2">
+{% include "tabs.html" %}
 
-                {% if tabs %}
-                    <h1>{{package_name}}</h1>
-                    <ul class="nav nav-pills nav-stacked">
-                        {% for tab in tabs %}
-                            <li><a href="{{ url_for('tab', package_name=package_name, tab_name=tab[0]) }}">{{ tab[1] }}</a></li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+
 
             </div>
             <div class="col-sm-8">
