--- a/src/View/Flask/templates/package/entries/bool.html
+++ b/src/View/Flask/templates/package/entries/bool.html
@@ -1,4 +1,4 @@
-{% extends "entries/key_word.html" %}
+{% extends "package/entries/key_word.html" %}
 
 {% block key_word %}
     <input type="checkbox" name="{{name}}" id="{{full_name}}" {{'checked' if checked}}
