--- a/src/View/Flask/templates/package/entries/multiple_cont.html
+++ b/src/View/Flask/templates/package/entries/multiple_cont.html
@@ -1,4 +1,4 @@
-{% extends "entries/multiple.html" %}
+{% extends "package/entries/multiple.html" %}
 
 {% block item %}
     <button type="button" class="modal_button" data-target="#Modal_{{ name }}_{{ entry[0] }}" full_name="{{ entry[2] }}">{{ entry[1] }}</button>
