--- a/src/View/Flask/templates/package/entries/multiple_cont_collapse.html
+++ b/src/View/Flask/templates/package/entries/multiple_cont_collapse.html
@@ -1,4 +1,4 @@
-{% extends "entries/multiple.html" %}
+{% extends "package/entries/multiple.html" %}
 
 {% block item %}
     <button type="button" class="collapse_button btn btn-block btn-primary	{{'inconsistent' if inconsistent}}"
