--- a/src/View/Flask/templates/package/entries/select.html
+++ b/src/View/Flask/templates/package/entries/select.html
@@ -1,4 +1,4 @@
-{% extends "entries/key_word.html" %}
+{% extends "package/entries/key_word.html" %}
 
 {% block key_word %}
     <select class="form-control" id="{{full_name}}" name="{{name}}">
