--- a/src/View/Flask/templates/package/entries/string.html
+++ b/src/View/Flask/templates/package/entries/string.html
@@ -1,8 +1,8 @@
-{% extends "entries/key_word.html" %}
+{% extends "package/entries/key_word.html" %}
 
 {% block key_word %}
     <input class="form-control" type="text" name="{{name}}" id="{{full_name}}" value="{{ value if value is not none}}"  {{ 'list="%s"' %list.name if list }}>
     {% if list %}
-        {% include 'entries/list.html' %}
+        {% include 'package/entries/list.html' %}
     {% endif %}
 {% endblock %}
