--- a/src/View/Flask/templates/package/entries/multiple.html
+++ b/src/View/Flask/templates/package/entries/multiple.html
@@ -1,4 +1,4 @@
-{% extends "entries/entry.html" %}
+{% extends "package/entries/entry.html" %}
 {% from 'elements/macros.html'  import help as help_button %}
 
 {% block entry %}
