--- a/src/View/Flask/templates/package/entries/number.html
+++ b/src/View/Flask/templates/package/entries/number.html
@@ -1,4 +1,4 @@
-{% extends "entries/key_word.html" %}
+{% extends "package/entries/key_word.html" %}
 
 {% block key_word %}
     <input class="form-control" type="number" name="{{name}}" id="{{full_name}}" value="{{ value if value is not none}}" step="{{step}}" min="{{min}}" max="{{max}}">
