--- a/src/View/Flask/templates/package/tabs.html
+++ b/src/View/Flask/templates/package/tabs.html
@@ -4,7 +4,8 @@
         <h1>{{package_name}}</h1>
         <ul id="tabs" class="nav nav-pills nav-stacked">
             {% for tab in tabs %}
-                <li><button type="button" class="btn btn-default btn-block btn-lg" name="tab" value="{{ tab[0] }}">{{ tab[1] }}</button></li>
+                <li><button type="button" class="btn btn-block btn-lg {{'btn-danger' if tab[2] else 'btn-default'}}"
+                            name="tab" value="{{ tab[0] }}">{{ tab[1] }}</button></li>
             {% endfor %}
         </ul>
     {% endif %}
