fixed package menu

--- a/src/View/Flask/static/css/main.css
+++ b/src/View/Flask/static/css/main.css
@@ -28,3 +28,7 @@
     .inconsistent >.panel >.panel-heading {
         background-color: orange;
     }
+
+    nav.package_menu{
+        position: fixed;
+    }
