--- a/src/View/Flask/templates/package/buttons.html
+++ b/src/View/Flask/templates/package/buttons.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="package_menu">
     <button type="button" class="btn btn-default btn-block btn-lg" id="undo">Undo</button>
     <button type="button" class="btn btn-default btn-block btn-lg" id="redo">Redu</button>
 
