incons probublává dobře asi

--- a/src/View/Flask/templates/package/tabs.html
+++ b/src/View/Flask/templates/package/tabs.html
@@ -1,8 +1,8 @@
 {% block tabs %}
-<nav>
+<nav id="tabs">
     {% if tabs %}
         <h1>{{package_name}}</h1>
-        <ul id="tabs" class="nav nav-pills nav-stacked">
+        <ul class="nav nav-pills nav-stacked">
             {% for tab in tabs %}
                 <li><button type="button" class="btn btn-block btn-lg {{'btn-danger' if tab[2] else 'btn-default'}}"
                             name="tab" value="{{ tab[0] }}">{{ tab[1] }}</button></li>
