--- a/src/View/Flask/templates/package/entries/section.html
+++ b/src/View/Flask/templates/package/entries/section.html
@@ -1,4 +1,4 @@
-<div id="section_{{ full_name }}" class="panel panel-default {{'inconsistent' if inconsistent}}">
+<div id="section_{{ full_name }}" class="panel {{'panel-danger' if inconsistent else 'panel-default'}}">
       <div class="panel-heading"><h2>{{label}}</h2></div>
 
   <div class="panel-body">
