--- a/src/View/Flask/templates/package/entries/multiple_cont.html
+++ b/src/View/Flask/templates/package/entries/multiple_cont.html
@@ -1,5 +1,5 @@
 {% extends "package/entries/multiple.html" %}
 
 {% block item %}
-    <button type="button" class="modal_button" data-target="#Modal_{{ name }}_{{ entry[0] }}" full_name="{{ entry[2] }}">{{ entry[1] }}</button>
+    <button type="button" class="modal_button btn btn-block {{'btn-danger' if entry[3] else 'btn-primary'}}" data-target="#Modal_{{ name }}_{{ entry[0] }}" full_name="{{ entry[2] }}">{{ entry[1] }}</button>
 {% endblock %}
