--- a/src/View/Flask/templates/package/tab.html
+++ b/src/View/Flask/templates/package/tab.html
@@ -1,4 +1,7 @@
 <div id="tab">
+<div id="loader"></div>
+<div class="tab_shader">
+</div>
     {% for section in sections %}
         {{section}}
     {% endfor %}
