--- a/src/View/Flask/static/css/main.css
+++ b/src/View/Flask/static/css/main.css
@@ -1,26 +1,71 @@
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
+footer {
+    background-color: #555;
+    color: white;
+    padding: 15px;
+}
 
-    .modal-content.ui-resizable {
+.modal-content.ui-resizable {
 
 }
 
-    td.multiple_buttons{
-        width:137px;
-    }
+td.multiple_buttons {
+    width: 137px;
+}
 
-    .navbar-brand{
-        padding: 0px;
-    }
+.navbar-brand {
+    padding: 0px;
+}
 
-    ul#log{
-        height: 100px;
-        overflow: auto;
-    }
+ul#log {
+    height: 100px;
+    overflow: auto;
+}
 
-    nav.package_menu{
-        position: fixed;
+nav.package_menu {
+    position: fixed;
+}
+
+#loader {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    z-index: 2;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid blue;
+    border-bottom: 16px solid blue;
+    border-radius: 50%;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+    display: none;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
     }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+.tab_shader {
+    background: rgba(128, 128, 128, 0.28);
+    width: 100%;
+    height: 100%;
+    display: none;
+    z-index: 1;
+    position: absolute;
+}
