--- a/src/View/FreeconfFlask/templates/package/entries/container.html
+++ b/src/View/FreeconfFlask/templates/package/entries/container.html
@@ -15,7 +15,7 @@
             <form class="form-horizontal" role="form">
 
                 {% for entry in entries %}
-                    {{ entry }}
+                    {{ entry|safe }}
                 {% endfor %}
 
             </form>
