--- a/src/View/FreeconfFlask/templates/package/entries/section.html
+++ b/src/View/FreeconfFlask/templates/package/entries/section.html
@@ -6,7 +6,7 @@
     <form class="form-horizontal" role="form">
 
             {% for entry in entries %}
-            {{entry}}
+            {{entry|safe}}
             {% endfor %}
 
     </form>
