--- a/src/View/FreeconfFlask/templates/elements/collapse.html
+++ b/src/View/FreeconfFlask/templates/elements/collapse.html
@@ -1,5 +1,5 @@
 <div class="collapse" id="Collapse_{{ name }}_{{ index }}"  full_name="{{ full_name }}">
             <div class="collapse-body">
-                {{ content }}
+                {{ content|safe }}
             </div>
 </div>
