--- a/src/View/FreeconfFlask/templates/elements/modal.html
+++ b/src/View/FreeconfFlask/templates/elements/modal.html
@@ -7,7 +7,7 @@
                 <h4 class="modal-title">Modal Header</h4>
             </div>
             <div class="modal-body">
-                {{ content }}
+                {{ content|safe }}
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
