--- a/src/View/FreeconfFlask/templates/package/tab.html
+++ b/src/View/FreeconfFlask/templates/package/tab.html
@@ -3,6 +3,6 @@
 <div class="tab_shader">
 </div>
     {% for section in sections %}
-        {{section}}
+        {{section|safe}}
     {% endfor %}
 </div>
