úprava balíčku a přidání string volitelkný list

--- a/src/View/FreeconfFlask/templates/package/entries/list.html
+++ b/src/View/FreeconfFlask/templates/package/entries/list.html
@@ -1,5 +1,5 @@
 <datalist id="{{list.name}}">
     {% for item in list.entries %}
-  <option value="{{item.value}}">{{item.label}}</option>
+      <option value="{{item.value}}" title="{{ item.help if item.help is not none}}">{{item.label}}</option>
     {% endfor %}
 </datalist>
