--- a/src/View/FreeconfFlask/templates/package/entries/select.html
+++ b/src/View/FreeconfFlask/templates/package/entries/select.html
@@ -2,10 +2,11 @@
 
 {% block key_word %}
     <select class="form-control" id="{{full_name}}" name="{{name}}">
-        <option selected value> ----------- </option>
+        <option selected value title> ----------- </option>
 
         {% for item in list.entries %}
-      <option value="{{item.value}}" {{ 'selected' if value==item.value }}>{{item.label}}</option>
+      <option value="{{item.value}}" title="{{ item.help if item.help is not none}}" {{ 'selected' if value==item.value }}>{{item.label}}</option>
         {% endfor %}
     </select>
 {% endblock %}
+
