inconsistency a comment ve VIew

--- a/src/View/FreeconfFlask/templates/package/entries/number.html
+++ b/src/View/FreeconfFlask/templates/package/entries/number.html
@@ -1,5 +1,13 @@
 {% extends "package/entries/key_word.html" %}
 
 {% block key_word %}
-    <input class="form-control" type="number" name="{{name}}" id="{{full_name}}" value="{{ value if value is not none}}" step="{{step}}" min="{{min}}" max="{{max}}">
+    <input class="form-control"
+           type="number"
+           name="{{name}}"
+           id="{{full_name}}"
+           value="{{ value if value is not none}}"
+           step="{{step}}"
+           min="{{min}}"
+           max="{{max}}">
+    <p class="help-block">Number is between {{ min }} - {{ max }}</p>
 {% endblock %}
