--- a/src/View/FreeconfFlask/templates/package/entries/number.html
+++ b/src/View/FreeconfFlask/templates/package/entries/number.html
@@ -9,5 +9,5 @@
            step="{{step}}"
            min="{{min}}"
            max="{{max}}">
-    <p class="help-block">Number is between {{ min }} - {{ max }}</p>
+    <p class="help-block">Number must been between {{ min }} - {{ max }}</p>
 {% endblock %}
