--- a/src/View/FreeconfFlask/templates/package/entries/string.html
+++ b/src/View/FreeconfFlask/templates/package/entries/string.html
@@ -6,7 +6,7 @@
            name="{{name}}"
            id="{{full_name}}"
            value="{{ value if value is not none}}"
-            {{ 'list="%s"' %list.name if list }}>
+            {{ 'list=%s' %list.name if list }}>
     {% if regexp %}
         <p class="help-block">Value must match with regexp {{ regexp }}</p>
     {% endif %}
