--- a/src/View/FreeconfFlask/templates/package/tabs.html
+++ b/src/View/FreeconfFlask/templates/package/tabs.html
@@ -4,8 +4,8 @@
         <h1>{{package_name}}</h1>
         <ul class="nav nav-pills nav-stacked">
             {% for tab in tabs %}
-                <li><button type="button" class="btn btn-block btn-lg {{'btn-danger' if tab[2] else 'btn-default'}}"
-                            name="tab" value="{{ tab[0] }}">{{ tab[1] }}</button></li>
+                <li><button type="button" class="btn btn-block btn-lg {{'btn-danger' if tab[3] else 'btn-default'}}"
+                            name="tab" value="{{ tab[0] }}" title="{{ tab[2] }}">{{ tab[1] }}</button></li>
             {% endfor %}
         </ul>
     {% endif %}
